# StarEngine

./: .gitignore  CMakeLists.txt  README.md  cmake-make.bat  cmake-make.sh  deps-CMakeLists.txt
src/: CMakeLists.txt  main.cpp
